# holisticai-old

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pr-workflow.yml  prod-release-workflow.yml  test-release-workflow.yml
docs/: conf.py  datasets.rst  metrics.rst  mitigating_bias.rst  mitigation.rst  pipeline.rst  plotting.rst  requirements.txt  utils.rst
docs/.generated/: holisticai.bias.mitigation.FairKCenterClustering.rst
docs/_build/doctrees/: datasets.doctree  environment.pickle  index.doctree  measuring_bias.doctree  metrics.doctree  mitigating_bias.doctree  mitigation.doctree  pipeline.doctree  plotting.doctree  utils.doctree
holisticai/datasets/: __init__.py  _dataloaders.py
holisticai/pipeline/: _estimator_wrapper.py  _handlers.py  _pipeline.py  _pipeline_helper.py
holisticai/utils/: _bias_mitigation_validation.py  _validation.py
tests/: test_dummy.py
tests/testing_utils/: _tests_data_utils.py  _tests_utils.py
tutorials/measuring_bias_tutorials/: measuring_bias_clustering.ipynb  measuring_bias_recommender.ipynb
tutorials/mitigating_bias_tutorials/: RecommenderMitigatingBiasExercises.ipynb  RecommenderMitigatingBiasSolutions.ipynb  clustering.py  data_loader.py  mitigating_bias_classification.ipynb  mitigating_bias_classification_pipeline.ipynb  mitigating_bias_recommender.ipynb  mitigating_bias_recommender_search.ipynb  mitigating_bias_recommender_user_feedback.ipynb  mitigating_bias_recommender_using_predict.ipynb  mitigation_bias_clustering.ipynb  mitigation_bias_fairlet_clustering.ipynb  mitigation_bias_multiclass.ipynb  mitigation_bias_regression_pipeline.ipynb
tutorials/utils/: datasets.py
(+336 files in other folders)
