[tool.poetry]
name = "holisticai"
version = "0.1.0"
description = ""
authors = ["GBadila <gabriel.badila@holisticai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pre-commit = "^2.20.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
